# Prog4-Minigin-Engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: emscripten.yml
Docs/: minigin_web.data  minigin_web.js
Game/: DigDug.cpp  DigDug.h  Game.cpp  Game.h  Main.cpp  Player.cpp  State.cpp  Utils.cpp  Utils.h
Game/Blocks/: BlockBehaviour.cpp  BlockBehaviour.h
Game/Blocks/States/: BlockDestroyedState.cpp  BlockDestroyedState.h  BlockSolidState.cpp  BlockSolidState.h
Game/Commands/: ConfirmedCommand.cpp  ConfirmedCommand.h
Game/Components/: HighScoreComponent.cpp  HighScoreComponent.h  ScoreComponent.cpp  ScoreComponent.h
Game/Enemies/: Pooka.cpp  Pooka.h
Game/Enemies/Fygar/: FygarBehaviour.cpp  FygarBehaviour.h
Game/Enemies/Fygar/Movement/: FygarMovement.cpp  FygarMovement.h
Game/Enemies/Fygar/States/: FygarAttackState.cpp  FygarAttackState.h  FygarDeadState.cpp  FygarDeadState.h  FygarGhostState.cpp  FygarGhostState.h  FygarInflatedState.cpp  FygarInflatedState.h  FygarNormalState.cpp  FygarNormalState.h
Game/Enemies/Pooka/: Pooka.h  PookaBehaviour.cpp  PookaBehaviour.h
Game/Enemies/Pooka/Movement/: PookaMovement.cpp  PookaMovement.h
Game/Enemies/Pooka/States/: PookaDeadState.cpp  PookaDeadState.h  PookaGhostState.cpp  PookaGhostState.h  PookaInflatedState.cpp  PookaInflatedState.h  PookaNormalState.cpp  PookaNormalState.h  PookaState.cpp  PookaState.h
Game/Enemies/States/: PookaGhostState.cpp  PookaGhostState.h  PookaNormalState.cpp  PookaNormalState.h  PookaState.cpp  PookaState.h
Game/Level/: LevelComponent.cpp  LevelComponent.h  LevelStruct.h  TilemapComponent.cpp  TilemapComponent.h
Game/Level/HighScore/: HighScoreConfirmCommand.cpp  HighScoreConfirmCommand.h  HighScoreNavigatecommand.cpp  HighScoreNavigatecommand.h
Game/Menu/: MenuMarker.cpp  MenuMarker.h
Game/Menu/BackGround/Movement/: MenuMovement.cpp  MenuMovement.h
Game/Menu/Events/System/: MenuNavigateCommand.cpp  (+3 more)
Game/Player/: Player.cpp  Player.h  PlayerBehaviour.cpp  PlayerBehaviour.h
Game/Player/CollisionObserver/: PlayerCollisionHandler.cpp  PlayerCollisionHandler.h
Game/Player/Command/: AttackCommand.cpp  AttackCommand.h  PlayerMoveCommand.cpp  PlayerMoveCommand.h
Game/Player/Movement/: PlayerMovement.cpp  PlayerMovement.h
Game/Player/Pump/: PumpBehaviour.cpp  PumpBehaviour.h
Game/Player/States/: PlayerAttackState.cpp  PlayerAttackState.h  PlayerIdleState.cpp  PlayerIdleState.h  PlayerInflatingState.cpp  PlayerInflatingState.h  PlayerWalkingState.cpp  PlayerWalkingState.h
Game/Sound/: SoundEventListener.cpp  SoundEventListener.h
Game/TileMap/: BaseTilemapLoader.cpp  BaseTilemapLoader.h  EnemySpawnerComponent.cpp  EnemySpawnerComponent.h  EnemyTraits.h  TilemapComponent.cpp  TilemapComponent.h
Game/TileMap/Layers/: GameLayers.h
Minigin/: Component.cpp  Component.h  DataTypes.h  FPSComponent.cpp  FPSComponent.h  FPSObject.cpp  FPSObject.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Gamepad.cpp  Gamepad.h  GamepadDataStructs.h  IGame.cpp  IGame.h  InputDevice.cpp  InputDevice.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  Main.cpp  Minigin.cpp  Minigin.h  RenderComponent.cpp  RenderComponent.h  Renderer.cpp  Renderer.h  RotationComponent.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TextComponent.cpp  TextComponent.h  TextObject.cpp  TextObject.h  Transform.cpp  Transform.h  (+1 more)
Minigin/Collisions/: CollisionManager.cpp  CollisionManager.h
Minigin/Commands/: Command.cpp  Command.h  GameActorCommand.cpp  GameActorCommand.h  MenuNavigateCommand.cpp  MenuNavigateCommand.h  MoveCommand.cpp  MoveCommand.h  MoveLeftCommand.cpp  MoveLeftCommand.h
Minigin/Components/: CollisionComponent.cpp  CollisionComponent.h  Component.cpp  DebugComponent.cpp  DebugComponent.h  FPSComponent.cpp  FPSComponent.h  HealthComponent.cpp  HealthComponent.h  MovementComponent.cpp  MovementComponent.h  RenderComponent.cpp  RenderComponent.h  RotationComponent.cpp  RotationComponent.h  SpriteAnimationComponent.cpp  SpriteAnimationComponent.h  TextComponent.cpp  TextComponent.h
Minigin/Components/BaseComp/: Component.cpp  Component.h
Minigin/Components/Collision/: CollisionComponent.cpp  CollisionComponent.h
Minigin/Components/Fps/: FPSComponent.cpp  FPSComponent.h
Minigin/Components/Health/: HealthComponent.cpp  HealthComponent.h
Minigin/Components/Movement/: MovementComponent.cpp  MovementComponent.h
Minigin/Components/Rendering/: RenderComponent.cpp  RenderComponent.h
Minigin/Components/Rotation/: RotationComponent.cpp  RotationComponent.h
Minigin/Components/Sprites/: SpriteAnimationComponent.cpp  SpriteAnimationComponent.h
Minigin/Components/Text/: TextComponent.cpp  TextComponent.h
Minigin/DataStructs/: DataStructs.h  GamepadDataStructs.h
Minigin/Devices/: Gamepad.cpp  Gamepad.h  InputDevice.cpp  InputDevice.h  Keyboard.cpp  Keyboard.h
Minigin/EventQueue/: Event.h  EventBus.cpp  EventBus.h  EventHash.h  EventsIds.h  IEventListener.h
Minigin/GameObject/: GameObject.cpp  GameObject.h
Minigin/HelperFunctions/: Utils.cpp  Utils.h
Minigin/Imgui/: imgui_plot.cpp
Minigin/Input/: InputManager.cpp  InputManager.h
Minigin/Managers/: InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h
Minigin/Observers/: Achievement.cpp  Achievement.h  GameActor.cpp  GameActor.h  IObserver.cpp  IObserver.h  ObserverManager.cpp  ObserverManager.h
Minigin/Rendering/: Renderer.cpp  Renderer.h
Minigin/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Minigin/Sound/: Decorator.cpp  Decorator.h  ServiceLocator.cpp  ServiceLocator.h  SoundEventListener.cpp  SoundEventListener.h  SoundSystem.cpp  SoundSystem.h  null_sound_system.cpp  null_sound_system.h  sdl_sound_system.cpp  sdl_sound_system.h
Minigin/States/: State.cpp  State.h
Minigin/Systems/: DebugSystem.cpp  DebugSystem.h  ScoreSystem.cpp  ScoreSystem.h
Minigin/Textures/: ResourceManager.cpp  Texture2D.cpp
Minigin/Transform/: Transform.cpp  Transform.h
docs/: minigin_web.js
web/: minigin_web.html
(+4 files in other folders)
